# interviewsignal

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  railway.toml
.claude/: settings.json
.github/workflows/: docker-publish.yml
docs/: relay-api.md
interview/: cli.py
interview/core/: __init__.py  audit.py  decisions.py  email_sender.py  flags.py  grader.py  integrity.py  report.py  session.py  setup.py  transport.py
interview/dashboard/: serve.py
interview/hooks/: claude_hook.py
interview/relay/: server.py  store.py
interview/skills/interview/: SKILL.md
interview/skills/submit/: SKILL.md
prompts/: dashboard_hm_product.md  debrief.md
tests/: test_hash_chain.py  test_integrity.py
